<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:background="#FFD4EEF9">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/taiyo"
		android:layout_gravity="right"
		android:padding="20dip"
		android:id="@+id/ImageViewTaiyo"/>
	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/kumo"
		android:paddingLeft="20dip"
		android:paddingTop="50dip"
		android:id="@+id/ImageViewKumo"/>

	<LinearLayout
		android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="bottom|center_horizontal"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/ImageView02"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/btn_hukidashi03"
			android:onClick="onClickMatane"/>
		<ImageView
			android:id="@+id/ImageView01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/btn_cat04"
			android:onClick="onClickCat"/>
	
	</LinearLayout>

	<LinearLayout
	 	android:id="@+id/LinearLayout02" 
		android:layout_height="fill_parent" 
		android:layout_width="fill_parent" 
		android:orientation="vertical"
		android:gravity="center">
		
		<LinearLayout style="@style/TextInfo">		
			<TextView
				style="@style/TeanNameText"
				android:text="@string/team_name"/>
			<TextView
				style="@style/TeanMenberText"
				android:text="@string/team_menber01"/>
			<TextView
				style="@style/TeanMenberText"
				android:text="@string/team_menber02"/>
			<TextView
				style="@style/TeanMenberText"
				android:text="@string/team_menber03"/>
			<TextView
				style="@style/TeanMenberText"
				android:text="@string/team_menber04"/>
			<TextView
				style="@style/TeanMenberText"
				android:text="@string/team_menber05"/>
			<TextView
				style="@style/TeanMenberText"
				android:text="@string/team_menber06"/>
		</LinearLayout>

	</LinearLayout>

</FrameLayout>
